# kanban-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-native.sh  index.html  style.css
launcher/: Cargo.toml
launcher/src/: main.rs
mcp_server/: server.py
src/: main.rs
